[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-upload-sdk"
version = "1.0.0"
description = "Python SDK for hotel data upload with cloud URL validation and duplicate prevention"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Finkraft AI", email = "info@finkraft.ai"}
]
maintainers = [
    {name = "Finkraft AI", email = "info@finkraft.ai"}
]
keywords = ["hotel", "upload", "sdk", "cloud", "validation", "s3", "azure", "cloudfront"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/finkraftai/hotel-upload-sdk"
Documentation = "https://github.com/finkraftai/hotel-upload-sdk#readme"
Repository = "https://github.com/finkraftai/hotel-upload-sdk"
Issues = "https://github.com/finkraftai/hotel-upload-sdk/issues"
Changelog = "https://github.com/finkraftai/hotel-upload-sdk/releases"

[tool.setuptools]
packages = ["hotel_sdk"]

[tool.setuptools.package-data]
hotel_sdk = ["py.typed"]